compiler/testData/diagnostics/tests/noValueForParameterOfLambda.diag.txt
/noValueForParameterOfLambda.kt:6:12: error: no value passed for parameter 's'
    lambda(1)
           ^^

